syntax = "proto2";
import "opera/scope/scope_descriptor.proto";

package scope;

option optimize_for         = SPEED;
option java_outer_classname = "WmProtos";
option java_package         = "com.opera.core.systems.scope.protos";

/**
 * TODO: We probably want a lot more information about each window, like URL, shortcut
 *       icon, etc.
 */
message WindowInfo
{
    required uint32 windowID   = 1;
    required string title      = 2;
    /**
     * 
     * TODO: Some of these are obsolete, like "ad". Figure out which ones should really be present.
     * 
     * Type is one of:
     * - "normal"
     * - "download"
     * - "cache"
     * - "plugins"
     * - "history"
     * - "help"
     * - "mail_view"
     * - "mail_compose"
     * - "newsfeed_view"
     * - "ad"
     * - "im_view"
     * - "p2p_view"
     * - "brand_view"
     * - "print_selection"
     * - "js_console"
     * - "gadget"
     * - "controller"
     * - "info"
     * - "dialog"
     * - "thumbnail"
     * - "normal_hidden"
     * - "devtools"
     */
    required string windowType = 3;
    /**
     * The `window-id` of the window who opened the window in question,
     * or 0 if it was not opened by another window.
     */
    required uint32 openerID   = 4;
}

message WindowID
{
    required uint32 windowID = 1;
}

message WindowFilter
{
    required bool   clearFilter        = 1 [default = false];
    repeated uint32 includeIDList      = 2;
    /**
     * The string can currently only have one value: `"*"`, meaing all window-ids.
     * The filter automatically includes windows that are opened from windows
     * in the INCLUDE filter.
     */
    repeated string includePatternList = 3;
    repeated uint32 excludeIDList      = 4;
    repeated string excludePatternList = 5;
}

message WindowList
{
    repeated WindowInfo windowList = 1;
}

message CreateWindowArg
{
    /**
     * Type is one of:
     * - "normal"
     * - "download"
     * - "cache"
     * - "plugins"
     * - "history"
     * - "help"
     * - "mail_view"
     * - "mail_compose"
     * - "newsfeed_view"
     * - "ad"
     * - "im_view"
     * - "p2p_view"
     * - "brand_view"
     * - "print_selection"
     * - "js_console"
     * - "gadget"
     * - "controller"
     * - "info"
     * - "dialog"
     * - "thumbnail"
     * - "normal_hidden"
     * - "devtools"
     */
    optional string windowType = 1;
}

message CloseWindowArg
{
    /**
     * Close window with the specified ID. If a window with that ID does
     * not exist, an error is returned.
     */
    required uint32 windowID = 1;
}

message OpenURLArg
{
    /**
     * Start loading the URL in this Window.
     */
    required uint32 windowID = 1;
    /**
     * The URL to load.
     */
    required string url      = 2;
}

message ModifyTypeFilterArg
{
    /**
     * Possible values:
     * 
     *  - "replace" clears the current filter, and replaces it with the input values.
     *  - "append" adds the input values to the current filter. It is acceptable to
     *    add a value already present in the filter (silent fail).
     *  - "default" resets the filter to its defaults. The input values are ignored.
     *    The default is ["normal_hidden", "devtools"].
     */
    required string mode     = 2;
    /**
     * A list of window types to exclude. For valid window types, see CreateWindowArg.
     */
    repeated string typeList = 1;
}

